# team_LLMM

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py  schemas.py
