[tool.poetry]
name = "llm-semantic-search"
version = "0.1.0"
description = ""
authors = ["Mtaylert <Mtaylert@drift.com>"]
readme = "README.md"
packages = [{include = "llm_semantic_search"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
openai = "^1.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
